# src/http/handler/user.rs
@@ -6,10 +6,11 @@ use serde::{Deserialize, Serialize};
 
 use crate::couchdb;
 use crate::couchdb::db;
+use crate::guid::Guid;
 use crate::http::error::ApiError;
 use crate::http::extractor::{scope::Scope, user::CurrentUser};
-use crate::http::handler::ApiResult;
-use crate::pagination::Page;
+use crate::http::handler::{ApiResult, PaginationQuery};
+use crate::pagination::{Cursor, Page};
 use crate::rbac::Enforcer;
 use crate::responses;
 use crate::user::{User, UserService};
@@ -28,20 +29,14 @@ pub struct UserResponse {
 
 impl From<User> for UserResponse {
     fn from(user: User) -> Self {
-        UserResponse { username: user.username().clone() }
+        UserResponse { username: user.username().to_string() }
     }
 }
 
 impl From<&User> for UserResponse {
     fn from(user: &User) -> Self {
-        UserResponse { username: user.username().clone() }
+        UserResponse { username: user.username().to_string() }
     }
-}
-
-#[derive(Debug, Deserialize)]
-pub struct ListQuery {
-    limit: Option<usize>,
-    offset: Option<usize>,
 }
 
 pub async fn list(
@@ -49,17 +44,22 @@ pub async fn list(
     enforcer: Data<RwLock<Enforcer>>,
     scope: Scope,
     current_user: CurrentUser,
-    Query(ListQuery { limit, offset }): Query<ListQuery>,
+    list: Query<PaginationQuery>,
 ) -> ApiResult<Json<Page<UserResponse>>> {
     Scope::from("users:read").matches(&scope)?;
     let enforcer = enforcer.read().unwrap();
-    enforcer.check(current_user.id().id(), "users", "read")?;
-    let limit: usize = limit.unwrap_or(20);
-    let offset: usize = offset.unwrap_or(0);
+    enforcer.check(current_user.id(), &Guid::simple("users"), "read")?;
+    let limit = list.limit();
+    let cursor = list.cursor();
 
-    log::info!("Listing users with limit {} and offset {}", &limit, &offset);
+    log::info!("Listing users with limit {} and cursor {:?}", &limit, &cursor);
 
-    let page = service.list_users(limit, offset).await?.map(|user| UserResponse::from(user));
+    let cursor = if let Some(cursor) = cursor {
+        Some(Cursor::from_b64(cursor)?)
+    } else {
+        None
+    };
+    let page = service.list_users(limit, cursor.as_ref()).await?.map(|user| UserResponse::from(user));
     Ok(Json(page))
 }
 
@@ -70,11 +70,15 @@ pub struct UsernamePathParam {
 
 pub async fn get(
     service: Data<UserService>,
+    enforcer: Data<RwLock<Enforcer>>,
     scope: Scope,
+    current_user: CurrentUser,
     path: Path<UsernamePathParam>,
 ) -> ApiResult<Json<UserResponse>> {
     Scope::from("users:read").matches(&scope)?;
     let username = &path.username;
+    let enforcer = enforcer.write().unwrap();
+    enforcer.check(current_user.id(), &User::build_guid(username), "read")?;
     service.find_user(username).await?
         .ok_or_else(|| ApiError::NotFound(format!("User {} not found", username)))
         .map(UserResponse::from)
@@ -119,7 +123,7 @@ pub async fn register(
 ) -> Result<Json<UserResponse>, ApiError> {
     Scope::from("users:manage").matches(&scope)?;
     let enf = enforcer.read().unwrap();
-    enf.check(current_user.id().id(), "users", "create")?;
+    enf.check(current_user.id(), &Guid::simple("users"), "create")?;
 
     let user = User::new(data.username.clone(), data.password.clone())?;
     let user = service.save_user(user).await?;
@@ -130,9 +134,9 @@ pub async fn register(
         // TODO: support bulk put in CouchDB to have them inserted all at once so that we don't need exclusive access
         // let enf = enforcer.write().unwrap();
         for role in roles {
-            enf.add_role_to_principal(user.id().id(), role).await?;
+            enf.add_role_to_principal(user.id().clone(), role).await?;
         }
     }
 
-    responses::ok(UserResponse { username: user.username().clone() })
+    responses::ok(UserResponse { username: user.username().to_string() })
 }
