# src/routes.rs
@@ -10,7 +10,8 @@ pub fn routes(cfg: &mut web::ServiceConfig) {
 
         // UI
         .service(web::scope("/ui")
-            .route("", web::get().to(ui::index)))
+            .route("", web::get().to(ui::index))
+        )
 
         // OAuth
         .service(web::scope("/oauth")
@@ -21,30 +22,44 @@ pub fn routes(cfg: &mut web::ServiceConfig) {
                 .route(web::post().to(oauth::login)))
             .route("/token", web::post().to(oauth::token))
             .route("/introspect", web::post().to(oauth::introspect))
-            .route("/revoke", web::post().to(oauth::revoke)))
+            .route("/revoke", web::post().to(oauth::revoke))
+        )
 
         // API
         .service(web::scope("/api")
             .service(web::scope("/docs")
                 .service(web::resource("/openapi.yml")
                     .name("open_api_spec")
-                    .route(web::get().to(api_docs::open_api)))
-                .route("", web::get().to(api_docs::redoc)))
+                    .route(web::get().to(api_docs::open_api))
+                )
+                .route("", web::get().to(api_docs::redoc))
+            )
 
             // V1Beta1
             .service(web::scope("/v1beta1")
                 .service(web::scope("/users")
                     .service(web::resource("")
                         .route(web::get().to(user::list))
-                        .route(web::post().to(user::register)))
+                        .route(web::post().to(user::register))
+                    )
                     .route("/me", web::get().to(user::me))
-                    .service(web::resource("/{username}")
-                        .route(web::get().to(user::get))
-                        .route(web::delete().to(user::delete)))
-                    .service(web::scope("/{username}/roles")
-                        .route("", web::get().to(rbac::get_user_roles))
-                        .route("/{role}", web::put().to(rbac::add_user_role))
-                        .route("/{role}", web::delete().to(rbac::remove_user_role))))))
+                    .service(web::scope("/{username}")
+                        .route("", web::get().to(user::get))
+                        .route("", web::delete().to(user::delete))
+                        .service(web::scope("/roles")
+                            .route("", web::get().to(rbac::get_user_roles))
+                            .route("/{role}", web::put().to(rbac::add_user_role))
+                            .route("/{role}", web::delete().to(rbac::remove_user_role))
+                        )
+                        .service(web::scope("/permissions")
+                            .route("", web::get().to(rbac::get_user_permissions))
+                            .route("", web::post().to(rbac::add_user_permission))
+                            .route("", web::delete().to(rbac::remove_user_permission))
+                        )
+                    )
+                )
+            )
+        )
     ;
 }
 
